--- a/etc/tlp.conf
+++ b/etc/tlp.conf
@@ -35,7 +35,7 @@
 # Set to 0 to disable, 1 to enable TLP.
 # Default: 1
 
-#TLP_ENABLE=1
+TLP_ENABLE=1
 
 # Control how warnings about invalid settings are issued:
 #   0=disabled,
@@ -82,14 +82,14 @@
 # Non-zero value enables, zero disables laptop mode.
 # Default: 0 (AC), 2 (BAT)
 
-#DISK_IDLE_SECS_ON_AC=0
-#DISK_IDLE_SECS_ON_BAT=2
+DISK_IDLE_SECS_ON_AC=0
+DISK_IDLE_SECS_ON_BAT=2
 
 # Dirty page values (timeouts in secs).
 # Default: 15 (AC), 60 (BAT)
 
-#MAX_LOST_WORK_SECS_ON_AC=15
-#MAX_LOST_WORK_SECS_ON_BAT=60
+MAX_LOST_WORK_SECS_ON_AC=15
+MAX_LOST_WORK_SECS_ON_BAT=60
 
 # Select a CPU scaling driver operation mode.
 # Intel CPU with intel_pstate driver:
@@ -97,6 +97,7 @@
 # AMD Zen 2 or newer CPU with amd-pstate driver as of kernel 6.3/6.4(*):
 #   active, passive, guided(*).
 # Default: <none>
+
 #CPU_DRIVER_OPMODE_ON_AC=active
 #CPU_DRIVER_OPMODE_ON_BAT=active
 
@@ -146,8 +147,8 @@
 #   EPP: amd-pstate driver in active mode ('amd-pstate-epp') as of kernel 6.3
 # Default: balance_performance (AC), balance_power (BAT)
 
-#CPU_ENERGY_PERF_POLICY_ON_AC=balance_performance
-#CPU_ENERGY_PERF_POLICY_ON_BAT=balance_power
+CPU_ENERGY_PERF_POLICY_ON_AC=balance_performance
+CPU_ENERGY_PERF_POLICY_ON_BAT=power
 
 # Set Intel CPU P-state performance: 0..100 (%).
 # Limit the max/min P-state to control the power dissipation of the CPU.
@@ -155,10 +156,10 @@
 # Requires Intel Core i 2nd gen. or newer CPU with intel_pstate driver.
 # Default: <none>
 
-#CPU_MIN_PERF_ON_AC=0
-#CPU_MAX_PERF_ON_AC=100
-#CPU_MIN_PERF_ON_BAT=0
-#CPU_MAX_PERF_ON_BAT=30
+CPU_MIN_PERF_ON_AC=0
+CPU_MAX_PERF_ON_AC=100
+CPU_MIN_PERF_ON_BAT=0
+CPU_MAX_PERF_ON_BAT=20
 
 # Set the CPU "turbo boost" (Intel) or "core performance boost" (AMD) feature:
 #   0=disable, 1=allow.
@@ -167,8 +168,8 @@
 # Note: a value of 1 does *not* activate boosting, it just allows it.
 # Default: <none>
 
-#CPU_BOOST_ON_AC=1
-#CPU_BOOST_ON_BAT=0
+CPU_BOOST_ON_AC=1
+CPU_BOOST_ON_BAT=0
 
 # Set CPU dynamic boost feature:
 #   0=disable, 1=enable.
@@ -178,14 +179,14 @@
 # Note: AMD CPUs currently have no tunable for this.
 # Default: <none>
 
-#CPU_HWP_DYN_BOOST_ON_AC=1
-#CPU_HWP_DYN_BOOST_ON_BAT=0
+CPU_HWP_DYN_BOOST_ON_AC=1
+CPU_HWP_DYN_BOOST_ON_BAT=0
 
 # Kernel NMI Watchdog:
 #   0=disable (default, saves power), 1=enable (for kernel debugging only).
 # Default: 0
 
-#NMI_WATCHDOG=0
+NMI_WATCHDOG=0
 
 # Select platform profile:
 #   performance, balanced, low-power.
@@ -195,8 +196,8 @@
 # hardware and additional profiles such as: balanced-performance, quiet, cool.
 # Default: <none>
 
-#PLATFORM_PROFILE_ON_AC=performance
-#PLATFORM_PROFILE_ON_BAT=low-power
+PLATFORM_PROFILE_ON_AC=balanced
+PLATFORM_PROFILE_ON_BAT=low-power
 
 # System suspend mode:
 #   s2idle: Idle standby - a pure software, light-weight, system sleep state,
@@ -224,8 +225,8 @@
 # to keep the hardware default for the particular disk.
 # Default: 254 (AC), 128 (BAT)
 
-#DISK_APM_LEVEL_ON_AC="254 254"
-#DISK_APM_LEVEL_ON_BAT="128 128"
+DISK_APM_LEVEL_ON_AC="254 254"
+DISK_APM_LEVEL_ON_BAT="1 1"
 
 # Exclude disk classes from advanced power management (APM):
 #   sata, ata, usb, ieee1394.
@@ -235,7 +236,7 @@
 # media before removing 'usb' or 'ieee1394' from the denylist!
 # Default: "usb ieee1394"
 
-#DISK_APM_CLASS_DENYLIST="usb ieee1394"
+DISK_APM_CLASS_DENYLIST="usb ieee1394"
 
 # Hard disk spin down timeout:
 #   0:        spin down disabled
@@ -246,8 +247,8 @@
 # to keep the hardware default for the particular disk.
 # Default: <none>
 
-#DISK_SPINDOWN_TIMEOUT_ON_AC="0 0"
-#DISK_SPINDOWN_TIMEOUT_ON_BAT="0 0"
+DISK_SPINDOWN_TIMEOUT_ON_AC="0 0"
+DISK_SPINDOWN_TIMEOUT_ON_BAT="12 12"
 
 # Select I/O scheduler for the disk devices.
 # Multi queue (blk-mq) schedulers:
@@ -264,7 +265,7 @@
 #   the old block layer in kernel 5.0
 # Default: keep
 
-#DISK_IOSCHED="mq-deadline mq-deadline"
+DISK_IOSCHED="mq-deadline mq-deadline"
 
 # AHCI link power management (ALPM) for SATA disks:
 #   min_power, med_power_with_dipm(*), medium_power, max_performance.
@@ -272,8 +273,8 @@
 # Multiple values separated with spaces are tried sequentially until success.
 # Default: med_power_with_dipm (AC & BAT)
 
-#SATA_LINKPWR_ON_AC="med_power_with_dipm"
-#SATA_LINKPWR_ON_BAT="med_power_with_dipm"
+SATA_LINKPWR_ON_AC=med_power_with_dipm
+SATA_LINKPWR_ON_BAT=min_power
 
 # Exclude SATA links from AHCI link power management (ALPM).
 # SATA links are specified by their host. Refer to the output of
@@ -291,14 +292,14 @@
 
 # Default: on (AC), auto (BAT)
 
-#AHCI_RUNTIME_PM_ON_AC=on
-#AHCI_RUNTIME_PM_ON_BAT=auto
+AHCI_RUNTIME_PM_ON_AC=on
+AHCI_RUNTIME_PM_ON_BAT=auto
 
 # Seconds of inactivity before disk is suspended.
 # Note: effective only when AHCI_RUNTIME_PM_ON_AC/BAT is activated.
 # Default: 15
 
-#AHCI_RUNTIME_PM_TIMEOUT=15
+AHCI_RUNTIME_PM_TIMEOUT=15
 
 # Power off optical drive in UltraBay/MediaBay: 0=disable, 1=enable.
 # Drive can be powered on again by releasing (and reinserting) the eject lever
@@ -322,7 +323,7 @@
 #INTEL_GPU_MIN_FREQ_ON_AC=0
 #INTEL_GPU_MIN_FREQ_ON_BAT=0
 #INTEL_GPU_MAX_FREQ_ON_AC=0
-#INTEL_GPU_MAX_FREQ_ON_BAT=0
+#INTEL_GPU_MAX_FREQ_ON_BAT=300
 #INTEL_GPU_BOOST_FREQ_ON_AC=0
 #INTEL_GPU_BOOST_FREQ_ON_BAT=0
 
@@ -331,15 +332,15 @@
 # Note: requires amdgpu or radeon driver.
 # Default: auto
 
-#RADEON_DPM_PERF_LEVEL_ON_AC=auto
-#RADEON_DPM_PERF_LEVEL_ON_BAT=auto
+RADEON_DPM_PERF_LEVEL_ON_AC=auto
+RADEON_DPM_PERF_LEVEL_ON_BAT=low
 
 # Dynamic power management method (DPM): balanced, battery, performance.
 # Note: radeon driver only.
 # Default: <none>
 
-#RADEON_DPM_STATE_ON_AC=performance
-#RADEON_DPM_STATE_ON_BAT=battery
+RADEON_DPM_STATE_ON_AC=performance
+RADEON_DPM_STATE_ON_BAT=battery
 
 # Display panel adaptive backlight modulation (ABM) level: 0(off), 1..4.
 # Values 1..4 control the maximum brightness reduction allowed by the ABM
@@ -349,19 +350,19 @@
 # - Savings are made at the expense of color balance
 # Default: 0 (AC), 1 (BAT)
 
-#AMDGPU_ABM_LEVEL_ON_AC=0
-#AMDGPU_ABM_LEVEL_ON_BAT=3
+AMDGPU_ABM_LEVEL_ON_AC=0
+AMDGPU_ABM_LEVEL_ON_BAT=4
 
 # Wi-Fi power saving mode: on=enable, off=disable.
 # Default: off (AC), on (BAT)
 
-#WIFI_PWR_ON_AC=off
-#WIFI_PWR_ON_BAT=on
+WIFI_PWR_ON_AC=off
+WIFI_PWR_ON_BAT=on
 
 # Disable Wake-on-LAN: Y/N.
 # Default: Y
 
-#WOL_DISABLE=Y
+WOL_DISABLE=Y
 
 # Enable audio power saving for Intel HDA, AC97 devices (timeout in secs).
 # A value of 0 disables, >= 1 enables power saving.
@@ -369,28 +370,28 @@
 # systems without PulseAudio may require 10.
 # Default: 1
 
-#SOUND_POWER_SAVE_ON_AC=1
-#SOUND_POWER_SAVE_ON_BAT=1
+SOUND_POWER_SAVE_ON_AC=0
+SOUND_POWER_SAVE_ON_BAT=1
 
 # Disable controller too (HDA only): Y/N.
 # Note: effective only when SOUND_POWER_SAVE_ON_AC/BAT is activated.
 # Default: Y
 
-#SOUND_POWER_SAVE_CONTROLLER=Y
+SOUND_POWER_SAVE_CONTROLLER=Y
 
 # PCIe Active State Power Management (ASPM):
 #   default(*), performance, powersave, powersupersave.
 # (*) keeps BIOS ASPM defaults (recommended)
 # Default: <none>
 
-#PCIE_ASPM_ON_AC=default
-#PCIE_ASPM_ON_BAT=default
+PCIE_ASPM_ON_AC=default
+PCIE_ASPM_ON_BAT=powersupersave
 
 # Runtime Power Management for PCIe bus devices: on=disable, auto=enable.
 # Default: on (AC), auto (BAT)
 
-#RUNTIME_PM_ON_AC=on
-#RUNTIME_PM_ON_BAT=auto
+RUNTIME_PM_ON_AC=on
+RUNTIME_PM_ON_BAT=auto
 
 # Exclude listed PCIe device adresses from Runtime PM.
 # Note: this preserves the kernel driver default, to force a certain state
@@ -407,7 +408,7 @@
 # Separate multiple drivers with spaces.
 # Default: "mei_me nouveau radeon xhci_hcd", use "" to disable completely.
 
-#RUNTIME_PM_DRIVER_DENYLIST="mei_me nouveau radeon xhci_hcd"
+RUNTIME_PM_DRIVER_DENYLIST=""
 
 # Permanently enable/disable Runtime PM for listed PCIe device addresses
 # (independent of the power source). This has priority over all preceding
@@ -421,7 +422,7 @@
 # Set to 0 to disable, 1 to enable USB autosuspend feature.
 # Default: 1
 
-#USB_AUTOSUSPEND=1
+USB_AUTOSUSPEND=1
 
 # Exclude listed devices from USB autosuspend (separate with spaces).
 # Use lsusb to get the ids.
@@ -435,31 +436,31 @@
 #   0=do not exclude, 1=exclude.
 # Default: 1
 
-#USB_EXCLUDE_AUDIO=1
+USB_EXCLUDE_AUDIO=0
 
 # Exclude bluetooth devices from USB autosuspend:
 #   0=do not exclude, 1=exclude.
 # Default: 0
 
-#USB_EXCLUDE_BTUSB=0
+USB_EXCLUDE_BTUSB=0
 
 # Exclude phone devices from USB autosuspend:
 #   0=do not exclude, 1=exclude (enable charging).
 # Default: 0
 
-#USB_EXCLUDE_PHONE=0
+USB_EXCLUDE_PHONE=1
 
 # Exclude printers from USB autosuspend:
 #   0=do not exclude, 1=exclude.
 # Default: 1
 
-#USB_EXCLUDE_PRINTER=1
+USB_EXCLUDE_PRINTER=0
 
 # Exclude WWAN devices from USB autosuspend:
 #   0=do not exclude, 1=exclude.
 # Default: 0
 
-#USB_EXCLUDE_WWAN=0
+USB_EXCLUDE_WWAN=0
 
 # Allow USB autosuspend for listed devices even if already denylisted or
 # excluded above (separate with spaces). Use lsusb to get the ids.
@@ -501,7 +502,7 @@
 #   bluetooth, nfc, wifi, wwan.
 # Default: <none>
 
-#DEVICES_TO_DISABLE_ON_BAT_NOT_IN_USE="bluetooth nfc wifi wwan"
+DEVICES_TO_DISABLE_ON_BAT_NOT_IN_USE="bluetooth nfc wwan"
 
 # Battery Care -- Charge thresholds
 # Charging starts when the charger is connected and the charge level
@@ -527,9 +528,9 @@
 # Default: <none>
 
 # Battery charge level below which charging will begin.
-#START_CHARGE_THRESH_BAT0=75
+START_CHARGE_THRESH_BAT0=75
 # Battery charge level above which charging will stop.
-#STOP_CHARGE_THRESH_BAT0=80
+STOP_CHARGE_THRESH_BAT0=80
 
 # BAT1: Secondary battery (primary on some laptops)
 # Default: <none>
@@ -542,7 +543,7 @@ STOP_CHARGE_THRESH_BAT1=80
 # Restore charge thresholds when AC is unplugged: 0=disable, 1=enable.
 # Default: 0
 
-#RESTORE_THRESHOLDS_ON_BAT=1
+RESTORE_THRESHOLDS_ON_BAT=1
 
 # ------------------------------------------------------------------------------
 # tlp-rdw - Parameters for the radio device wizard
